Displaying empty cart page with message, and redirect link.

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,16 @@
     <h1>My Cart</h1>
   </header>
 
+  <% if enhanced_cart.length == 0 %>
+  <div class="alert alert-warning" role="alert">
+  <h2>No items in cart</h2>
+  <a href="<%= products_path %>" class="alert-link">Return to Homepage</a>
+  <a href="<%= product_path Product.find(3) %>" class="alert-link">Return to Homepage</a>
+  </div>
+
+  
+  <% else %>
+
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -48,5 +58,7 @@
       <% end %>
     </div>
   </div>
+
+  <% end %>
 
 </section>
