--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,7 +5,36 @@
   </header>
 
   <div class="order-summary jumbotron">
-    <h4>Thank you for your order!</h4>
+    <h4>Thank you for your order <%= @order.email %>!</h4>
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Product Image</th>
+          <th>Product Name</th>
+          <th>Product Description</th>
+          <th>Quantity</th>
+          <th>Total</th>
+        </tr>
+      </thead>
+      <% @order.line_items.each do |item| %>
+        <tbody>
+        <tr>
+          <td><%= image_tag item.product.image.url %></td>
+          <td><%= item.product.name %></td>
+          <td><%= item.product.description %></td>
+          <td><%= item.quantity %></td>
+          <td><%=  humanized_money_with_symbol item.total_price_cents / 100 %></td>
+        </tr>
+      <% end %>
+        <tr>
+          <td colspan="5" align="right">
+            Final Total: <%= humanized_money_with_symbol @order.total_cents / 100 %>
+          </td>
+        </tr>
+        </tbody>
+      
+      
+    </table>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
