Adding adming dashboard to display total product count and total number of categories.

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<div class="panel panel-default">
+  <div class="panel-heading"><h2>Total Product Count</h2></div>
+  <div class="panel-body">
+    <h3><%= @num_products %></h3>
+  </div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-heading"><h2>Number of Categories</h2></div>
+  <div class="panel-body">
+    <h3><%= @num_categories %></h3>
+  </div>
+</div>
