--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,8 +2,10 @@
 
 <%= form_for :user, url: '/users' do |f| %>
 
-  Name: <%= f.text_field :name %>
+  First Name: <%= f.text_field :first_name %>
   <br/>
+  Last Name: <%= f.text_field :last_name%>
+  <br />
   Email: <%= f.text_field :email %>
   <br/>
   Password: <%= f.password_field :password %>
